# EV-BETS

./: .gitignore  README.md  docker-compose.yml
scanner/: .env.example  .gitignore  alembic.ini  pyproject.toml  ruff.toml
scanner/alembic/versions/: 001_initial_schema.py  002_projection_cache_tables.py  003_dfs_lines.py  004_soccer_priors.py  005_dfs_projection.py  006_historical_odds.py  007_soccer_match_odds.py  008_injuries.py  009_book_breakdown.py
scanner/src/: config.py  db.py  logger.py  pipeline.py  scan.py  scheduler.py  sportsbook_target.py
scanner/src/calibration/: brier.py  reconcile.py
scanner/src/daily/: live_capture.py  record_day.py
scanner/src/dfs/: bovada_edges.py  bucket_report.py  live_odds.py  parlay_optimizer.py
scanner/src/historical/: analytics.py  backtest.py  backtest_report.py  book_roi.py  dfs_backtest.py  fbref.py  fbref_all.py  fbref_extras.py  fbref_masterdb.py  footballdata.py  game_lines_backtest.py  gameline_backtest.py  injuries_ingest.py  odds_api_history.py  soccer_backtest.py  statsbomb.py  statsbomb_all.py  understat_ingest.py
scanner/src/kalshi/: LICENSE_NOTICE.md  adapter.py  client.py  market_sync.py  ws.py
scanner/src/math/: blend.py  consensus.py  devig.py  distributions.py  ev.py  kelly.py  projection_weight.py
scanner/src/mlb_stats/: ingest.py
scanner/src/nba_stats/: client.py  ingest.py  playbyplay.py  tracking.py
scanner/src/prizepicks/: pipeline.py
scanner/src/projections/: calibrate_soccer.py  demo_luke_bets.py  engine.py  features.py  job.py  nba.py  nba_game_model.py  (+8 more)
scanner/tests/: conftest.py
(+113 files in other folders)
