[project]
name = "scanner"
version = "0.1.0"
description = "Kalshi EV scanner — Python service"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "scipy>=1.14.0",
    "numpy>=2.1.0",
    "httpx>=0.27.0",
    "cryptography>=43.0.0",
    "websockets>=13.1",
    "playwright>=1.48.0",
    "tenacity>=9.0.0",
    "sqlalchemy>=2.0.36",
    "cloakbrowser>=0.3.31",
    "nba-api>=1.11.0",
    "soccerdata>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.115.0",
    "ruff>=0.7.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "psycopg2-binary>=2.9.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "integration: requires Postgres",
    "e2e: requires network",
]

[tool.coverage.run]
source = ["src/math", "src/providers", "src/kalshi"]
omit = ["*/tests/*"]
